Use ast instead of declaration in tests